# cursor-hackathon-sg-2025-prompt-paladin

./: .env.template  .gitignore  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  PHASE_2_COMPLETE.md  PROJECT_HALT.md  README.md  env.example  hooks.json  install_hook.sh  lore.txt  pyproject.toml  uninstall_hook.sh
hooks/: before_submit_prompt.py  debug_wrapper.sh  install.py  run.sh  uninstall.py  wrapper.sh
mcp_server/: __init__.py  cli.py  config.py  models.py  prompts.py  server.py  tools.py
