[project]
name = "prompt-paladin-mcp"
version = "0.1.0"
description = "MCP server for prompt quality assessment"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.2.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.39.0",
    "openai>=1.54.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

